# ncpufreqd

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  Makefile.in  README  build.mk  configure  configure.in  ncpufreqd.conf  ncpufreqd.conf.in
gentoo-init.d/: ncpufreqd
man8/: CMakeLists.txt  Makefile.am  Makefile.in  ncpufreqd.8
progs/: CMakeLists.txt  Makefile.am  Makefile.in  ncpuauto.c
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  config.c  config.h  defs.h  functions.c  functions.h  handler_acpithr.c  handler_acpithr.h  handler_cpufreq.c  handler_cpufreq.h  ncpufreqd.c
